Fix folding panel z-index

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -146,3 +146,7 @@ h3, h4, h5, h6 {
     }
   }
 }
+
+.folding-panel.is-open {
+  z-index: 10;
+}
